fix: Repair when the revision is below the feed floor
The test selected a repair for an install at or above min_revision and a plain
update for one below it, the opposite of each path's intended purpose.

Extracts the decision into FeedManager.needsRepair and repairs only when
revision.txt is unreadable or its value is below the floor.